packages/backstage/my-resources-plugin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-resources-plugin
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-resources-plugin
  template:
    metadata:
      labels:
        app: my-resources-plugin
    spec:
      serviceAccountName: backstage
      containers:
      - name: plugin
        image: python:3.11-slim
        ports:
        - containerPort: 8081
        command:
        - /bin/sh
        - -c
        - "pip install -q boto3 && python3 -u /app/server.py"
        volumeMounts:
        - name: app
          mountPath: /app
      volumes:
      - name: app
        configMap:
          name: my-resources-plugin
---
apiVersion: v1
kind: Service
metadata:
  name: my-resources-plugin
  namespace: backstage
spec:
  selector:
    app: my-resources-plugin
  ports:
  - port: 80
    targetPort: 8081
