packages/backstage/backstage-ingress.yaml
# TLS terminates at NLB with ACM - no cert-manager needed
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  namespace: backstage
  annotations:
    external-dns.alpha.kubernetes.io/hostname: backstage.timedevops.click
    argocd.argoproj.io/sync-wave: "25"
spec:
  ingressClassName: nginx
  rules:
  - host: backstage.timedevops.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backstage
            port:
              number: 7007
