packages/backstage/my-resources-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-resources-ingress
  namespace: backstage
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # CORS: Allow credentials (cookies) to be sent
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, OPTIONS"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: backstage.timedevops.click
    http:
      paths:
      - path: /api/my-resources(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: my-resources-plugin
            port:
              number: 80
