packages/backstage/resource-api-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resource-api-proxy
  namespace: backstage
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: backstage.timedevops.click
    http:
      paths:
      - path: /api/resources
        pathType: Prefix
        backend:
          service:
            name: resource-api
            port:
              number: 80
